# task-steering

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: backend-passthrough.md  skills.md  summarization.md  task-middleware.md  task-mode.md  workflow-mode.md
examples/: simple_agent.py
src/task_steering/: __init__.py  middleware.py  types.py
tests/: conftest.py  test_middleware.py
